# lunar_fdd_ws

./: .gitignore  README.md  allfiles.txt  build_log.txt
src/construction_robot/: package.xml  setup.cfg  setup.py
src/construction_robot/config/: ros2_controllers.yaml
src/construction_robot/construction_robot/: repeated_motion.py  safe_joint_test.py
src/construction_robot/launch/: lunar_robot.launch.py
src/construction_robot/urdf/: lunar_ur10.urdf.xacro
src/data_logger/: package.xml  setup.py
src/data_logger/data_logger/: data_logger.py
src/fault_injection/: package.xml  setup.cfg  setup.py
src/fault_injection/config/: baseline_experiment.yaml  bearing_wear_experiment.yaml  (+2 more)
src/hybrid_fdd/: package.xml  setup.cfg  setup.py
src/hybrid_fdd/hybrid_fdd/: cascade_fdd_node.py  fdd_evaluator_node.py  feature_extractor.py  hybrid_fdd_node.py  kalman_filter.py  ml_classifier.py
src/hybrid_fdd/launch/: cascade_fdd.launch.py  standard_fdd.launch.py
src/hybrid_fdd/models/: anomaly_threshold.pkl  decision_tree.pkl  isolation_forest.pkl  label_encoder.pkl  layer1_baseline.pkl  scaler.pkl
src/hybrid_fdd/scripts/: evaluate_phase5.py  plot_roc.py  plot_significance.py  run_phase5.sh  train_models.py
src/lunar_environment/: package.xml  setup.cfg  setup.py
src/lunar_fdd_interfaces/: CMakeLists.txt  package.xml
src/lunar_fdd_interfaces/msg/: EnergyMetrics.msg  FDDResult.msg  FaultLabel.msg  FaultStatus.msg  SensorResiduals.msg  SensorSnapshot.msg
src/my_first_pkg/: package.xml  setup.py
src/performance_monitor/: package.xml  setup.cfg  setup.py
(+9 files in other folders)
